examples/test/testpolicy764.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy764
  namespace: namespace38
spec:
  podSelector:
    matchLabels:
      key48: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value9
      podSelector:
        matchLabels:
          key0: value25
          key22: value38
          key17: value2
